Add veterinary clinics operations
